<resources>
    <string name="app_name">World Wide</string>
    <string name="IniciarSesion">Inicia sesión o registrate</string>
    <string name="Registrarse">Registrarse</string>
    <string name="btnIniciarSesion">Iniciar Sesión</string>
    <string name="btnIniciarGoogle">Google</string>
    <string name="correoElectronico">Correo electronico</string>
    <string name="btnRegistro">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia">Contraseña</string>
    <string name="contrasenia2">Confirmar contraseña</string>
    <string name="buttonRegistrar">Registrarse</string>
    <string name="buttonBuscarDestino">Buscar destino</string>
    <string name="LugarRecomendado">Lugares recomendados</string>
    <string name="btnRecomendar1">Lugar</string>
    <string name="btnRecomendar2">Lugar2</string>
    <string name="btnRecomendar3">Lugar3</string>
    <string name="btnRecomendar4">Lugar4</string>
    <string name="textEligeContinente">Elige el continente:</string>
    <string name="btnRegistrarse">Registrarse</string>
    <string name="buttonAfrica">África</string>
    <string name="buttonAmerica">América</string>
    <string name="buttonAsia">Asia</string>
    <string name="buttonEuropa">Europa</string>
    <string name="buttonOceania">Oceanía</string>
    <string name="textviewElige">Elige el continente:</string>
    <string name="textviewTipoTurismo">Tipo de turismo</string>
    <string name="checkbox">CheckBox</string>
    <string name="string_checkbox" />
    <string name="string_string_checkbox" />
    <string name="checkboxCultural">Cultural</string>
    <string name="checkboxGastronomico">Gastronómico</string>
    <string name="checkboxNaturalez">Naturaleza</string>
    <string name="checkboxSolPlaya">Sol y playa</string>
    <string name="buttonBuscarTur">Buscar</string>
    <string name="textviewResultadoLugar">Lugares recomendados</string>
    <string name="buttonCerrarSesion">Cerrar sesión</string>
    <string name="textImagenInicio">Encuentra el destino ideal para tu proximo viaje</string>
    <string name="imgInicio">inicio</string>
    <string name="icono">icono</string>
    <string name="textviewnombreApp">WorldWide</string>
    <string name="world_wide">World Wide</string>
    <string name="places_recommender_app">Places Recommender app</string>
    <string name="todo">logoInicio</string>
    <string name="home">Inicio</string>
    <string name="account">Perfil</string>
    <string name="exit">Salir</string>
    <string name="search">Lugares</string>
    <string name="logo">logo</string>
    <string name="hola_bienvenido">Hola! Bienvenido</string>
    <string name="logueate_para_continuar">Logueate para continuar</string>
    <string name="gastronomico">Gastronómico</string>
    <string name="LugarReco">Lugares recomendados</string>
    <string name="sol_playa">Sol y Playa</string>
    <string name="naturaleza1">Naturaleza</string>
    <string name="cultural1">Cultural</string>
    <string name="solPlaya">sol</string>
    <string name="naturaleza">Naturaleza</string>
    <string name="gastronomia">Gastronomia</string>
    <string name="cultural">Cultural</string>
    <string name="encuentra">Descubre el mundo</string>
    <string name="usuario_no_registrado">Usuario no registrado</string>
    <string name="error">Error</string>
    <string name="imagenResul">img resultado</string>
    <string name="temperatura">Visitar:</string>
    <string name="prueba">pruebaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="expand">expand</string>
    <string name="olvido_contraseña">¿Olvidaste la contraseña?</string>
    <string name="restablecer_contrasena">Restablecer contraseña</string>
    <string name="nombre">Nombre</string>


</resources>