<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.ContinenteActivity">


    <LinearLayout
        android:layout_width="385dp"
        android:layout_height="610dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textElige"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textviewElige" />

        <Button
            android:id="@+id/btnAfrica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAfrica" />

        <Button
            android:id="@+id/btnAmerica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAmerica" />

        <Button
            android:id="@+id/btnAsia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonAsia" />

        <Button
            android:id="@+id/btnEuropa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonEuropa" />

        <Button
            android:id="@+id/btnOceania"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonOceania" />
    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.bottomappbar.BottomAppBar
            android:id="@+id/bottonAppBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:backgroundTint="@color/white"
            >
            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottonNavigationView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:menu="@menu/bottom_menu2"
                android:background="@android:color/transparent"
                android:layout_marginEnd="20dp"
                app:labelVisibilityMode="labeled"/>
        </com.google.android.material.bottomappbar.BottomAppBar>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>