<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controlador.OlvidoContrasenaActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="378dp"
        android:layout_height="250dp"
        android:layout_marginTop="48dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/logo"
            android:src="@drawable/mapa_1"
            android:transitionName="logo_image" />

        <TextView
            android:id="@+id/logoName"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bangers"
            android:text="@string/world_wide"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:transitionName="logo_name" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="378dp"
        android:layout_height="204dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.923">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextCorreoRecuperar"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <Button
            android:id="@+id/restablecerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#00BFFF"
            android:text="@string/restablecer_contrasena"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/mensajeErrorCont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usuario_no_registrado"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_error"
            android:textSize="14sp"
            android:visibility="invisible" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>