<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#00BFFF"
    tools:context=".controlador.MainActivity">


    <ImageView
        android:id="@+id/imagen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/mapa_1"
        android:transitionName="logo_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/bangers"
        android:text="@string/world_wide"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:transitionName="logo_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen" />

    <TextView
        android:id="@+id/slogan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/places_recommender_app"
        android:textAlignment="center"
        android:textSize="21sp"
        android:transitionName="Slogan_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:textColor="@color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>